# micropython-rp2-smartStepper

./: LICENSE  README.md  hil_config.py  package.json  pulseGenerator.py  pyproject.toml  smartStepper.py  test_hil.py  test_smartStepper.py
pio_emulation/: generate_emulate_call.py
smartstepper/: axis.py  multiaxis.py  pulseGenerator.py  smartStepper.py
tests/: hil_accel_time.py  hil_multiaxis.py  hil_pc_direction_change.py  hil_pc_speed_change.py  hil_pc_stop_start.py  hil_stop_restart.py  hil_triangular.py  test_hil.py
tools/: plot_profiles.py
