[project]
name = "micropython-rp2-smartStepper"
version = "0.1.0"
description = "MicroPython stepper motor library for RP2040/RP2350 — host-side test tools"
requires-python = ">=3.9"

# Dependencies for running the hardware-in-the-loop test suite (tests/test_hil.py).
# The library itself runs on MicroPython; install it on the Pico via mip:
#   import mip; mip.install("github:bikeNomad/micropython-rp2-smartStepper")
# or via mpremote:
#   mpremote mip install github:bikeNomad/micropython-rp2-smartStepper
dependencies = [
    "logic2-automation",
    "mpremote",
]
